--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Country Scrambler</title>
+		<meta property="og:title" content="Country Scrambler" />
+		<meta property="og:description" content="Can you unscramble the country?" />
+		<meta name="description" content="Can you unscramble the country?" />
+		<meta property="og:type" content="Website" />
+		<meta property="og:url" content="https://country-scrambler.netlify.app" />
+		<meta property="og:site_name" content="Country Scrambler" />
+		<meta
+			property="og:image"
+			content="https://country-scrambler.netlify.app/preview.webp"
+		/>
 	</head>
 	<body>
 		<div id="app"></div>
